# gathering

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: doxyconfig
examples/: CMakeLists.txt  instances.cpp  pybind.py
include/gathering/: gathering.hpp  glm_include.hpp  pybind.cpp  simulation.hpp
resources/shader/: basic.vert  non_shaded.frag  shaded.frag  static.vert
src/: container.cpp  container.hpp  gathering.cpp  meta.hpp  opengl_primitives.cpp  opengl_primitives.hpp  opengl_toolkit.cpp  opengl_toolkit.hpp  opengl_widget.cpp  opengl_widget.hpp  particle.cpp  particle.hpp  scene.cpp  scene.hpp  simulation.cpp
src/instance_generator/: CMakeLists.txt  main.cpp
